--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,10 @@
 # https://www.playframework.com/documentation/latest/Configuration
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+
+mongodb {
+  uri = "mongodb://localhost:27017/bows-formula-one-api"
+}
+
+session {
+  ttl = 900
+}
